examples/test/testpolicy19997.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19997
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key26: value11
      key16: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value12
          key0: value49
          key40: value8
      podSelector:
        matchLabels:
          key35: value15
